<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".userGamesActivity">

    <TextView
        android:id="@+id/textViewGamesTitle"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:drawableTop="@android:color/black"
        android:gravity="left"
        android:text="@string/game_title"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <ListView
        android:id="@+id/listViewGames"
        android:layout_width="0dp"
        android:layout_height="362dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGamesTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonBackButton"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:text="@string/back"
        android:background="#0C0404"
        android:drawableTop="@android:color/black"
        android:onClick="returnGamePage"
        android:shadowColor="@android:color/black"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddGame"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="PrivateResource" />

    <Button
        android:id="@+id/buttonReturnMainMenu"
        android:layout_width="180dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#0C0404"
        android:drawableTop="@android:color/black"
        android:onClick="returnToMainPage"
        android:shadowColor="@android:color/black"
        android:text="@string/return_main_menu"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBackButton"
        app:layout_constraintVertical_bias="0.283"
        tools:ignore="PrivateResource" />

    <Button
        android:id="@+id/buttonAddGame"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="#0C0404"
        android:drawableTop="@android:color/black"
        android:onClick="goToAddGamePage"
        android:shadowColor="@android:color/black"
        android:text="@string/add_game"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewGames"
        app:layout_constraintVertical_bias="0.175"
        tools:ignore="PrivateResource" />

    <Button
        android:id="@+id/buttonReNew"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:text="@string/renew"
        android:background="#0C0404"
        android:drawableTop="@android:color/black"
        android:shadowColor="@android:color/black"
        android:textColor="@color/cardview_light_background"
        android:onClick="reNewClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

</androidx.constraintlayout.widget.ConstraintLayout>